-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2
-
None
-
-
5f703bf63e (qt/qtconnectivity/dev) 21c1a2c81d (qt/qtconnectivity/6.3) 21c1a2c81d (qt/tqtc-qtconnectivity/6.3) 5f703bf63e (qt/tqtc-qtconnectivity/dev)
QBluetoothDeviceDiscoveryAgent (QDDA) is used to perform bluetooth device discoveries / inquiries. The constructor of the QDDA allows specifying which local adapter to use.
The macOS QDDA implementation uses the default adapter unconditionally. This is fine in itself, but in case the constructor has been provided with an address, we should check that it matches with the local adapter (and signal an error if not).
This is reproducible with tst_qbluetoothdevicediscoveryagent autotest.